--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <option value="8">With any input: Make a character uppercase, if it follows a space or a hyphen</option>
       </select>
       <label for="output">Output: <input type="text" id="output" disabled /></label>
-      <button>Generate</button>
+      <button id="generate">Generate</button>
     </section>
 
     <script src="script.js"></script>
